--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         
         <a href = "./Public/aboutme.html">About Me</a>
         <a href = "./Public/contactme.html">Contact Me</a>
-
+<footer> @Joseph Rosenberger. All rights reserved. </footer>
 </body>
 </html>
